<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bej"
    tools:context=".LoginFragment"
    android:id="@+id/LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="48dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/logintxt"
            android:textColor="#0C0C0C"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/editEmail"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="68dp"
            android:layout_marginTop="228dp"
            android:hint="@string/email"
            android:paddingRight="150dp"
            android:textColor="#0C0C0C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="180dp"
            android:textColor="#0C0C0C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:paddingLeft="130dp"
            android:paddingRight="140dp"
            android:textColor="#0C0C0C"

            android:text="@string/login"
        android:background="@drawable/rounded_button_background"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="207dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/nothave"
                android:textColor="#0C0C0C"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="538dp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/registertxt"
                android:textColor="@color/fushia"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="294dp"
                tools:layout_editor_absoluteY="532dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editEmail" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_vpn_key_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>